--- a/docs/snippets/installation.md.ejs
+++ b/docs/snippets/installation.md.ejs
@@ -2,9 +2,18 @@
 
 1. Download **<%= title %>** package from https://www.zoolanders.com/<%= link %>.
 2. Go to the **Joomla Extension Manager** (*Joomla Administration / Extensions / Extension Manager / Install*).
-3. "Upload and Install" the previously downloaded package.
-
+3. Use the "Upload Package File" option to choose the previously downloaded package from your pc.
+4. Click on the "Upload & Install" button.
+ 
 Once the installation process have finished the **<%= plugin %>** plugin should be installed and published. To be sure go to ***Extensions / Plugin Manager*** and check if it is present and enabled.
+
+**Note**: When you are facing an error during installation, it is highly recommended to try to Install from directory:
+
+1. Unpack all files from the **<%= title %>** downloaded package to a directory on your pc.
+2. Using FTP, upload this directory to the /tmp directory of your Joomla installation on your webserver.
+2. Go to the **Joomla Extension Manager** (*Joomla Administration / Extensions / Extension Manager / Install*).
+3. Use the "Install from Directory" option to set the directory of your uploaded package files.
+4. Click on the "Install" button and Joomla will install it from the given directory.
 
 ## Trough ZL Manager
 
