Snippet text update

--- a/docs/snippets/requirements.md.ejs
+++ b/docs/snippets/requirements.md.ejs
@@ -1,6 +1,6 @@
 # Requirements and Compatibility
 
-**<%= title %>** 3.x versions are compatible with Joomla! 2.5.x/3.x, ZOO 3.x and ZLFW 3.x. All previous versions are ONLY for Joomla! 1.5 but please take in consideration those are deprecated and not supported any more.
+**<%= title %>** 3.x versions are compatible with Joomla! 2.5.x/3.x, ZOO 3.x and ZLFW 3.x. All previous versions, if available, are ONLY for Joomla 1.5 and are considered deprecated.
 
 ## **<%= title %>** 3.x requires
 
