Bulk update changing paths, adding snippets, improving generally the code.

--- a/snippets/element_config_files.md.ejs
+++ b/snippets/element_config_files.md.ejs
@@ -1,41 +1,10 @@
-# Configuration
-
-After **DownloadPro** was installed, you may add it as an element to the appropriate ZOO type. Use the following steps: 
-- Press the "gear tab".
-- Choose desirable application group *(e.g. Blog, Static pages)*.
-- Click on the *"Edit elements"* link, that appears under the type name *(e.g. Article, Author, etc.)*.
-- Click on the appropriate element on the right panel in order to add **DownloadPro** element to the appropriate type.
-
-![DownloadPro](http://joolanders.github.io/Docs/docs/DownloadPro/images/dnloadpro_element.png)
-
-Now you may configure added **DownloadPro** element.
-
-## Basic Parameters
-
-*Basic Parameters* define common element settings.
-
-![Basic parameters](http://joolanders.github.io/Docs/docs/DownloadPro/images/params_basic.png)
-
-- **Name** - Allows the user to set element's name, that will be used in layouts and item properties.
-- **Description** - Allows the user to describe element shortly.
-- **Access Level** - Allows the user to setup element accessibility. In order to make it totally accessible, set this parameter to *"Public"*.
-- **Repeatable** - Allows the user to set *"Yes"* if he wants to use a few of such elements per one application item.
-- **Instance Limit** - Allows the user to limit the number of element instances *(usually used in combination with the Repeatable param)*.
-
-## Edit Layout Parameters
-
-*Edit Layout Parameters* define element layout settings.
-
-![Layout parameters](http://joolanders.github.io/Docs/docs/DownloadPro/images/params_edit_layout.png)
-
-- **Main Layout** - Allows the user to set main layout.
-- **Sub Layout**  - Allows the user to set additional sub layout.
-
-## Files Parameters
-
 *Files Parameters* allow you to configure what types of files can be used and how they are used and accessed.
 
-![Files Parameters](http://joolanders.github.io/Docs/docs/DownloadPro/images/params_files.png)
+<% if (amazons3) { %>
+![Basic parameters](http://joolanders.github.io/Docs/assets/img/element_config_files_s3.png)
+<% } else { %>
+![Basic parameters](http://joolanders.github.io/Docs/assets/img/element_config_files.png)
+<% } %>
 
 - **Mode**. 
 You have three selections here: *Files, Folders, Both*.
@@ -67,17 +36,10 @@ Relative path to file directory. Defaults to the standard 'images' folder of Joo
 
 - **Max Upload Size** - Maximum dimensions for uploaded files, in KB. Default value is 1024Kb (1Mb).
 
+<% if (amazons3) { %>
 - **Amazon S3 Integration** - Allows the user to attach files stored in the Amazon S3 bucket. Amazon S3 (Simple Storage Service) is an online file storage web service offered by Amazon Web Services. Amazon S3 provides storage through web services interfaces.  You can read more about it [here](http://aws.amazon.com/s3/). 
 
 	- **S3 Bucket** - Amazon S3 Bucket name. You can read more about it [here](http://docs.aws.amazon.com/AmazonS3/latest/dev/UsingBucket.html).
 	- **AWS AccessKey** - AWS access key. You can read more about it [here](http://docs.aws.amazon.com/fws/1.1/GettingStartedGuide/index.html?AWSCredentials.html).
 	- **AWS SecretKey** - AWS secret key. You can read more about it [here](http://docs.aws.amazon.com/fws/1.1/GettingStartedGuide/index.html?AWSCredentials.html).
-
-## Specific Parameters
-
-![Specific parameters](http://joolanders.github.io/Docs/docs/DownloadPro/images/specific_params.png)
-
-- **Download Mode** - Allows the user to specify download mode:
-	- **Direct** - Select this option for direct file download (the system doesn't check user access level for downloading).
-	- **Attachment** - Select this option to download file as attachment.
-	- **Protected** - Select this option to protected download mode (the system checkouts if the user has rights for downloading).
+<% } %>
