--- a/snippets/installation.md.ejs
+++ b/snippets/installation.md.ejs
@@ -19,6 +19,11 @@
 3. Use the "Install from Directory" option to set the directory of your uploaded package files.
 4. Click on the "Install" button and Joomla will install it from the given directory.
 
+<% if (package.plugin === 'ZL Elements') { %>
+### Quick Note
+**<%= title %>** is installed under the same plugin, *ZL Elements*, as any other ZL Element for performance reasons. If you want to check that **<%= title %>** is installed correctly, visit the ZOO configuration and edit any Type from any App. If **<%= title %>** shows up on the right section under *ZOOlanders* Group, then you're good to go!
+<% } %>
+
 ## Trough ZL Manager
 
 1. Be sure you have installed the **ZL Manager Extension**.
