--- a/snippets/element_config_basic.md.ejs
+++ b/snippets/element_config_basic.md.ejs
@@ -1,5 +1,7 @@
 *Basic Parameters* define common element settings.
 
+<% var repeatable = repeatable == undefined ? 0 : 1; %>
+
 <% if (repeatable) { %>
 ![Basic parameters](http://joolanders.github.io/Docs/assets/img/element_config_basic_rep.png)
 <% } else { %>
