--- a/snippets/element_position_layout.md.ejs
+++ b/snippets/element_position_layout.md.ejs
@@ -1,6 +1,6 @@
 *Layout Parameters* shows the available layouts for the element.
 
 - **Main Layout** - Allows to specify main layout.
-- **Sub Layout** - Allows to specify additional sublayout.
+- **Sub Layout** - If available, allows to specify additional sublayout.
 
 Each layout could load it's own parameters, be sure to explore them and if those are not enaugh you can always [create your own](GettingStarted/custom_layout.md) one.
