--- a/snippets/element_position_layout.md.ejs
+++ b/snippets/element_position_layout.md.ejs
@@ -3,4 +3,4 @@
 - **Main Layout** - Allows to specify main layout.
 - **Sub Layout** - If available, allows to specify additional sublayout.
 
-Each layout could load it's own parameters, be sure to explore them and if those are not enaugh you can always [create your own](GettingStarted/custom_layout.md) one.
+For more information about the Layouts please review the [Layouts doc](<%= element %>/layouts.md).
