--- a/snippets/installation.md.ejs
+++ b/snippets/installation.md.ejs
@@ -1,6 +1,6 @@
 #Installation
 
-## Trough Joomla Manager
+## Through Joomla Manager
 
 1. Download **<%= title %>** package from https://www.zoolanders.com/<%= link %>.
 <%
