--- a/snippets/translation.md.ejs
+++ b/snippets/translation.md.ejs
@@ -39,3 +39,5 @@ The default **en-GB.com_zoo.ini** language file is located in the **media/zoo/ap
 Eg: **media/zoo/applications/<%= type %>/language/YOUR-LANG/YOUR-LANG.com_zoo.ini**
 
 <% } %>
+
+The translations are managed by [Transifex](https://www.transifex.com/projects/p/zoolanders) where you can download the available language files and submit your ones.
